--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,13 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+optimizer = true
+optimizer_runs = 999999
+via_ir = true
+
+ffi = true
+
+fs_permissions = [{ access = "read-write", path = "./selectors"}]
+
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
